# SendVideoToQmlWithQThread

./: CMakeLists.txt  main.cpp  opencvimageprovider.cpp  opencvimageprovider.h
